--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=8.1.0",
+      "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8",
