--- a/composer.json
+++ b/composer.json
@@ -1,52 +1,59 @@
 {
-    "name": "mbagnall/php-rql",
-    "type": "library",
-    "description": "A PHP client driver for the RethinkDB query language (ReQL)",
-    "keywords": ["rethinkdb","driver","database","reql"],
-    "homepage": "http://danielmewes.github.io/php-rql/",
-    "license": "Apache-2.0",
-    "authors": [
-        {
-            "name": "Daniel Mewes",
-            "email": "danielmewes@onlinehome.de",
-            "homepage": "http://dmewes.com",
-            "role": "Developer"
-        },
-        {
-            "name": "Michael Bagnall",
-            "email": "michael@bagnall.io",
-            "homepage": "http://bagnall.io",
-            "role": "Maintainer"
-        },
-        {
-            "name": "Rob Landers",
-            "email": "landers.robert@gmail.com",
-            "homepage": "https://withinboredom.info",
-            "role": "Maintainer"
-        }
-    ],
-    "require": {
-        "php": ">=8.1.0",
-      "ext-json": "*",
-      "ext-openssl": "*"
+  "name": "mbagnall/php-rql",
+  "type": "library",
+  "description": "A PHP client driver for the RethinkDB query language (ReQL)",
+  "keywords": [
+    "rethinkdb",
+    "driver",
+    "database",
+    "reql"
+  ],
+  "homepage": "http://danielmewes.github.io/php-rql/",
+  "license": "Apache-2.0",
+  "authors": [
+    {
+      "name": "Daniel Mewes",
+      "email": "danielmewes@onlinehome.de",
+      "homepage": "http://dmewes.com",
+      "role": "Developer"
     },
-    "require-dev": {
-        "phpunit/phpunit": "~9.5",
-        "squizlabs/php_codesniffer": "~3.7"
+    {
+      "name": "Michael Bagnall",
+      "email": "michael@bagnall.io",
+      "homepage": "http://bagnall.io",
+      "role": "Maintainer"
     },
-    "autoload": {
-        "files": ["rdb/rdb.php"],
-        "psr-4": {
-            "r\\": "rdb/",
-            "r\\Tests\\": "tests/"
-        }
-    },
-    "scripts": {
-        "test": "tests/phpunit.sh"
-    },
-    "config": {
-        "preferred-install": "dist",
-        "optimize-autoloader": true,
-        "process-timeout": 300
+    {
+      "name": "Rob Landers",
+      "email": "landers.robert@gmail.com",
+      "homepage": "https://withinboredom.info",
+      "role": "Maintainer"
     }
+  ],
+  "require": {
+    "php": ">=8.1.0",
+    "ext-json": "*",
+    "ext-openssl": "*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~9.5",
+    "squizlabs/php_codesniffer": "~3.7"
+  },
+  "autoload": {
+    "files": [
+      "rdb/rdb.php"
+    ],
+    "psr-4": {
+      "r\\": "rdb/",
+      "r\\Tests\\": "tests/"
+    }
+  },
+  "scripts": {
+    "test": "tests/phpunit.sh"
+  },
+  "config": {
+    "preferred-install": "dist",
+    "optimize-autoloader": true,
+    "process-timeout": 300
+  }
 }
