--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -17,11 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Setup PHP and disable opcache
+    - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.2'
-        extensions: opcache
 
     - name: Start Rethinkdb
       run: docker run -d -p 28015:28015 -p 8080:8080 rethinkdb:2.4.2
