--- a/composer.json
+++ b/composer.json
@@ -33,12 +33,14 @@
   "require": {
     "php": ">=8.2",
     "ext-json": "*",
-    "ext-openssl": "*",
-    "amphp/socket": "^2.1"
+    "ext-openssl": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "~9.5",
     "squizlabs/php_codesniffer": "~3.7"
+  },
+  "suggest": {
+    "amphp/socket": "For async connections"
   },
   "autoload": {
     "files": [
