--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,9 @@
     "phpunit/phpunit": "~9.5",
     "squizlabs/php_codesniffer": "~3.7"
   },
+  "suggest": {
+    "amphp/socket": "For async connections"
+  },
   "autoload": {
     "files": [
       "rdb/rdb.php"
